fix(challenge): incorrect z-index

--- a/src/GZCTF/ClientApp/src/styles/components/ChallengeCard.module.css
+++ b/src/GZCTF/ClientApp/src/styles/components/ChallengeCard.module.css
@@ -59,5 +59,5 @@
   bottom: 0;
   left: 0;
   transform: translateY(35%);
-  z-index: 100;
+  z-index: 80;
 }
